crates/gr-planner/src/snapshots/gr_planner__tests__identity_aware_linux_uhid.snap
---
source: crates/gr-planner/src/lib.rs
assertion_line: 578
expression: "serde_yaml::to_string(&plan).expect(\"yaml\")"
---
session_id: 1
profile_id: dualsense
requested_goal: identity-aware
requested_fidelity_tier: identity-aware
selected_level: hid
target_host_platform: linux
selected_backend_family: linux-uhid
selected_provider_id: linux-uhid
selected_translator_family: dual-sense
capability_result:
  enabled_capabilities:
  - rumble
  - haptics
  - lighting
  - player-indicators
  - trigger-effect
  - audio
degradation:
  degraded: false
deployment_requirements: {}
backend_open_context:
  session_id: 1
  profile_id: dualsense
  fidelity_tier: identity-aware
  backend_level: hid
  host_platform: linux
session_options:
  accepted_update_kinds:
  - frame
  unknown_field_policy: reject
  range_validation_policy: reject
  coerce_integer_like_values: false
  allow_missing_optional_fields: true
  require_monotonic_sequence: false
  reject_unsupported_provider_preference: true
  unsupported_capability_policy: report
  delivery_policy: !callback
    callback_namespace: virtualGamepad
  backpressure_policy: !drop-oldest
    log_dropped_outputs: true
    max_queue_depth: 8
